--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   <main>
     <!-- Hero Section-->
-    <section class="hero-section mx-5  justify-content-center">
+    <section class="hero-section mx-5 pt-5  justify-content-center">
       <div class="container justify-content-center ">
         <div class="row align-items-center">
           <!--Hero Content Left-->
